@@ -1,3 +1,12 @@
+From ffc1266 (pyuvdata):
+=======================
+
+In prisim/interferometry.py,
+
+(*) In member function __init__() of class InterferometerData, convert
+antenna location from ENU to ECEF coordinates and store in key
+'antenna_positions'
+
 From a147da6 (pyuvdata):
 =======================
 
